--- a/.env
+++ b/.env
@@ -1,4 +1,17 @@
 
+# Creation:
+CREATION_APP_SERVER_PORT=8080
+CREATION_ARG_JAR_NAME=creation-0.0.1-SNAPSHOT.jar
+CREATION_APP_SPRING_ACTIVE_PROFILE=dev
+CREATION_APP_KEYCLOACK_REALM=project-management
+CREATION_APP_KEYCLOACK_RESOURCE=project-management-creation
+CREATION_APP_KEYCLOACK_AUTH_SERVER_URL=http://keycloak:8099/auth
+CREATION_APP_KEYCLOACK_PUBLIC_CLIENT=false
+CREATION_APP_KEYCLOACK_BEARER_ONLY=true
+CREATION_APP_KEYCLOACK_CREDENTIALS_SECRET=
+
+
 # Gateway:
 GATEWAY_APP_SERVER_PORT=8080
 GATEWAY_ARG_JAR_NAME=gateway-0.0.1-SNAPSHOT.jar
+GATEWAY_APP_URL_MANAGER_CREATION=http://creation:8080
